added recipe template

--- a/recipe_template.html
+++ b/recipe_template.html
@@ -5,17 +5,16 @@
 		<title></title>
 	</head>
 	<body>
-		<h1>Lasagna</h1>
-		<img src="../images/lasagna.jpg">
+		<h1></h1>
+		<img>
 		<h2>Description</h2>
 		<p></p>
 		<h2>Ingredients</h2>
-		<ul>
-			<li></li>
-		</ul>
-		<h2>Steps</h2>
-		<ol>
-			<li></li>
-		</ol>
+        <ul></ul>
+            <li></li>
+        <h2>Steps</h2>
+            <ol>
+                <li></li>
+            </ol>
 	</body>
 </html>
