--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="recipes/mexican lasagna.html">Mexican Lasagna</a></li>
+            <li><a href="recipes/chicken parmesan.html">Chicken Parmesan</a></li>
+            <li><a href="recipes/philadelphia classic cheesecake">Philadelphia Classic Cheesecake</a></li>
+        </ul>
     </body>
 </html>
