--- a/tools/recipe_template.html
+++ b/tools/recipe_template.html
@@ -6,15 +6,15 @@
 	</head>
 	<body>
 		<h1></h1>
-		<img>
+		<img src="" alt="">
 		<h2>Description</h2>
 		<p></p>
 		<h2>Ingredients</h2>
         <ul></ul>
             <li></li>
         <h2>Steps</h2>
-            <ol>
-                <li></li>
-            </ol>
+		<ol>
+			<li></li>
+		</ol>
 	</body>
 </html>
