--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/mexican lasagna.html">Mexican Lasagna</a></li>
-            <li><a href="recipes/chicken parmesan.html">Chicken Parmesan</a></li>
-            <li><a href="recipes/philadelphia classic cheesecake">Philadelphia Classic Cheesecake</a></li>
+            <li><a href="recipes/mexican_lasagna.html">Mexican Lasagna</a></li>
+            <li><a href="recipes/chicken_parmesan.html">Chicken Parmesan</a></li>
+            <li><a href="recipes/philadelphia_classic_cheesecake.html">Philadelphia Classic Cheesecake</a></li>
         </ul>
     </body>
 </html>
